--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,20 +125,23 @@ dependencies {
     //fullReleaseCompile "com.android.support:cardview-v7:25.+"
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson
     // https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor
-    
+
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.dagger:dagger:2.+'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.+'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-    testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.+'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.8'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     demoCompile 'com.android.support:cardview-v7:25.3.1'
     fullCompile 'com.android.support:cardview-v7:25.3.1'
     releaseCompile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    testCompile 'junit:junit:4.12'
 }
