--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
-    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+
     <application
         android:name=".dagger.SimpleApplication"
         android:allowBackup="true"
@@ -58,8 +59,8 @@
             android:name=".provider.BookProvider"
             android:authorities="com.exam.book.provider"
             android:enabled="true"
-            android:label="@string/label_contentprovider"
-            android:exported="true" />
+            android:exported="true"
+            android:label="@string/label_contentprovider" />
 
         <activity android:name=".LauncherActivity">
             <intent-filter>
@@ -82,7 +83,6 @@
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator_test" />
         </service>
-
         <service
             android:name=".account.SyncService"
             android:enabled="true"
@@ -90,6 +90,7 @@
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
             </intent-filter>
+
             <meta-data
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/syncadapter_test" />
@@ -100,6 +101,7 @@
                 <action android:name="com.song.example.action.ACCOUNT_SETTINGS" />
             </intent-filter>
         </activity>
+        <activity android:name=".okhttp.OkhttpTestActivity"></activity>
     </application>
 
 </manifest>
