--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,19 @@
             android:label="@string/title_activity_service_test" />
         <activity android:name=".service.MessengerActivity" />
         <activity android:name=".service.BinderActivity" />
+        <activity android:name=".tile.TileTestActivity" />
+
+        <service
+            android:name=".tile.TestTileService"
+            android:enabled="true"
+            android:exported="true"
+            android:icon="@mipmap/ic_android"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
 
         <service
             android:name=".service.BinderService"
