--- a/otherapp/build.gradle
+++ b/otherapp/build.gradle
@@ -1,11 +1,14 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
+
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
+
     defaultConfig {
-        minSdkVersion 21
+        applicationId "com.song.otherapp"
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -26,6 +29,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.+'
+
+    compile 'com.android.support:appcompat-v7:25.2.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
