--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,17 +56,32 @@ project.gradle.buildFinished {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion compileSdk
+    buildToolsVersion buildTools
     defaultConfig {
         applicationId "com.example.le.contentprovidertest"
-        minSdkVersion 23
-        targetSdkVersion 25
+        minSdkVersion minSdk
+        targetSdkVersion targetSdk
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                cFlags "-DSTDC_HEADERS"
+            }
+        }
+        ndk {
+            // Specifies the ABI configurations of your native
+            // libraries Gradle should build and package with your APK.
+            abiFilters 'x86', 'x86_64', 'armeabi', 'armeabi-v7a',
+                    'arm64-v8a'
+        }
     }
-
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+        }
+    }
     signingConfigs {
         release {
             storeFile file("../keystore.jks")
@@ -117,6 +132,7 @@ configurations {
 
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -129,9 +145,12 @@ dependencies {
     // https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor
 
 
-    compile 'com.android.support:appcompat-v7:25.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:25.+'
+    compile "com.android.support.constraint:constraint-layout:${constraintVersion}"
+    compile "com.android.support:appcompat-v7:${supportVersion}"
+    compile "com.android.support:design:${supportVersion}"
+    demoCompile "com.android.support:cardview-v7:${supportVersion}"
+    fullCompile "com.android.support:cardview-v7:${supportVersion}"
+    releaseCompile "com.android.support:cardview-v7:${supportVersion}"
     compile 'com.google.dagger:dagger:2.+'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
@@ -144,7 +163,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.+'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    demoCompile 'com.android.support:cardview-v7:25.+'
-    fullCompile 'com.android.support:cardview-v7:25.+'
-    releaseCompile 'com.android.support:cardview-v7:25.+'
+
 }
