--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+ext{
+    compileSdk = 25
+    buildTools = "25.0.2"
+    supportVersion = "26.0.0-alpha1"
+    constraintVersion = "1.0.2"
+    minSdk = 23
+    targetSdk = 25
+}
+
 buildscript {
     repositories {
+        google()
         jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha1'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
