--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,8 @@ android {
     }
     externalNativeBuild {
         cmake {
-            path "CMakeLists.txt"
+//            path "src/main/cpp/CMakeLists.txt"
+            path "src/main/cpp/CMakeLists.txt"
         }
     }
     signingConfigs {
